Code: Ensure all long lines are wrapped

--- a/github-dark.css
+++ b/github-dark.css
@@ -482,6 +482,7 @@
   /* GitHub Bug: Enable wrapping of long code lines */
   .blob-code-inner {
     white-space: pre-wrap !important;
+    word-break: break-all !important;
   }
   /* invisible border */
   .gisttabs a:not(.selected), .gisttabs a:not(.selected):hover,
